more stories fix mobile alignment

--- a/resources/scss/modular/_block-more-stories.scss
+++ b/resources/scss/modular/_block-more-stories.scss
@@ -96,7 +96,6 @@
 				> .card {
 
 					scroll-snap-align: center;
-					flex: 0 0 85%;
 					box-shadow: none;
 
 					// the ::after element is now the far side margin, so dont
